A whole bunch of work upgrading the review page to polymer 1

--- a/app/assets/components/elements/custom-icons.html
+++ b/app/assets/components/elements/custom-icons.html
@@ -1,7 +1,7 @@
-<iron-iconset-svg id="custom-icons" size="16">
+<iron-iconset-svg id="custom-icons" name="custom-icons" size="16">
     <svg>
         <defs>
-            <g id="selected"><circle cx="8" cy="8" r="7"></circle></g>
+            <g id="selected"  ><circle cx="8" cy="8" r="7"></circle></g>
             <g id="unselected"><circle cx="8" cy="8" r="2"></circle></g>
         </defs>
     </svg>
