--- a/app/assets/components/elements/json-request.html
+++ b/app/assets/components/elements/json-request.html
@@ -61,7 +61,9 @@
         if (this.errorCallback)
           this.errorCallback(event, detail.request.xhr.responseText);
       },
-      behaviors: [ Oj.globalExpressions ]
+      behaviors: [
+              Oj.globalExpressions
+      ]
     }
   )
   </script>
