--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,11 @@
 
     <%= javascript_include_tag "application" %>
 
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <style is="custom-style"><%= Rails.application.assets['application.css'].to_s.html_safe %></style>
     <%= html_import_tag "application" %>
 
-    <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
-    <script charset="utf-8" src="http://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
+    <script charset="utf-8" src="https://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 
     <%= csrf_meta_tags %>
